--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   get: ^4.6.6
   freezed: ^2.5.1
   flutter_riverpod: ^2.5.1
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_test:
